--- a/MarieANToinette/MarieANToinette/MainPage.xaml
+++ b/MarieANToinette/MarieANToinette/MainPage.xaml
@@ -1,11 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MarieANToinette"
+             xmlns:local="clr-namespace:MarieANToinette;assembly=MarieANToinette"
              x:Class="MarieANToinette.MainPage">
 
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+        <StackLayout.BindingContext>
+            <local:PictureViewModel />
+        </StackLayout.BindingContext>
+
+        <Label HorizontalOptions="Center" VerticalOptions="Start" Text="{Binding Title}"></Label>
+        <Frame OutlineColor="Transparent" BackgroundColor="Transparent" HasShadow="False" Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding RefreshCommand}" CommandParameter="Frame1" />
+            </Frame.GestureRecognizers>
+            <local:PinchToZoomContainer ImageSrc="{Binding PictureUrl}"></local:PinchToZoomContainer>
+        </Frame>
+        <StackLayout Spacing="1" VerticalOptions="End" HorizontalOptions="CenterAndExpand" Orientation="Horizontal">
+            <Button Text="Précédent" VerticalOptions="Start" HorizontalOptions="Center" Command="{Binding ChangeCommand}" CommandParameter="previous" />
+            <Picker SelectedItem="{Binding Duree}" Title="Choisir une durée" HorizontalOptions="CenterAndExpand">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>1 Minute</x:String>
+                        <x:String>15 Minutes</x:String>
+                        <x:String>1 Heure</x:String>
+                        <x:String>6 Heures</x:String>
+                        <x:String>1 jour</x:String>
+                        <x:String>1 semaine</x:String>
+                        <x:String>1 mois</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
+            <Button Text="Suivant" VerticalOptions="Start" HorizontalOptions="Center" Command="{Binding ChangeCommand}" CommandParameter="next" />
+        </StackLayout>
+    </StackLayout>
 
 </ContentPage>
